@@ -276,6 +276,9 @@ baltic_crusades = {
 	global_missionary_strength = 0.05
 	land_morale = 0.15
 	manpower_recovery_speed = 0.25
+	war_exhaustion = -0.1
+	land_maintenance_modifier = -0.25
+	land_forcelimit = 5
 }
 reorganizing_folklands = {
 	global_tax_modifier = 0.05
@@ -440,6 +443,8 @@ invasion_nation_m = {
 	land_forcelimit = 5
 	discipline = 0.05
 	horde_unity = 1
+	war_exhaustion = -0.1
+	land_maintenance_modifier = -0.25
 	tur_militarists_influence = 1
 }
 all_graviates_titles_acquired = {
