@@ -1331,7 +1331,8 @@
  vn_crusade_events.4.a: "By all means help them!"
  vn_crusade_events.4.b: "Send money"
  vn_crusade_events.4.c: "Send troops"
- vn_crusade_events.4.dd: "Let them fend for themselves"
+ vn_crusade_events.4.dd: "Send  money and troops"
+ vn_crusade_events.4.e: "Let them fend for themselves"
  vn_crusade_events.5.t: "[From.GetName] Sends Money"
  vn_crusade_events.5.d: "Our religious compatriots in [From.GetName], while not committing to helping in the war effort, have at least seen fit to send us money to aid in our upcoming fight with the infidels. Their pious generosity will not be forgotten."
  vn_crusade_events.5.a: "Great!"
