@@ -1330,7 +1330,8 @@
  vn_crusade_events.4.a: "Wir müssen ihnen auf jeden Fall helfen!"
  vn_crusade_events.4.b: "Schickt Geld"
  vn_crusade_events.4.c: "Schickt Truppen"
- vn_crusade_events.4.dd: "Sie sollen sich selbst verteidigen"
+ vn_crusade_events.4.dd: "Schickt Geld und Truppen"
+ vn_crusade_events.4.e: "Sie müssen für sich selbst sorgen"
  vn_crusade_events.5.t: "[From.GetName] schickt Geld"
  vn_crusade_events.5.d: "Unsere religiösen Landsleute in [From.GetName] haben sich zwar nicht dazu verpflichtet, bei den Kriegsanstrengungen zu helfen, haben es aber zumindest für angebracht gehalten, uns Geld zur Unterstützung unseres bevorstehenden Kampfes mit den Ungläubigen zu schicken. Ihre fromme Großzügigkeit wird nicht vergessen werden."
  vn_crusade_events.5.a: "Schön!"
